--- a/src/modules/users-list/components/users-list/users-list.component.html
+++ b/src/modules/users-list/components/users-list/users-list.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="userList">
+  <table mat-table [dataSource]="userList" class="table">
     <ng-container matColumnDef="first_name">
       <th mat-header-cell *matHeaderCellDef> First name </th>
       <td mat-cell *matCellDef="let element" (click)="userSelected(element)"> {{element.first_name}} </td>
@@ -14,5 +14,5 @@
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table><mat-paginator [pageSize]="3" [length]="pagesCount" (page)="pageChanged($event)"></mat-paginator>
+  </table><mat-paginator [pageSize]="3" [length]="pagesCount" (page)="pageEvent = pageChanged($event)"></mat-paginator>
 </div>
